[gd_scene load_steps=2 format=3 uid="uid://run_failed_001"]

[ext_resource type="Script" path="res://scripts/ui/run_failed_overlay.gd" id="1_run_failed"]

[node name="RunFailedOverlay" type="CanvasLayer"]
layer = 10
script = ExtResource("1_run_failed")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.3, 0, 0, 0.8)

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -100.0
offset_right = 180.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "RUN FAILED"
horizontal_alignment = 1
modulate = Color(1, 0.3, 0.3, 1)

[node name="ReasonLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Fell off the course"
horizontal_alignment = 1

[node name="PotLostLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Pot Lost: $2,000"
horizontal_alignment = 1
modulate = Color(1, 0.5, 0.5, 1)

[node name="ReturnLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Returning to hub..."
horizontal_alignment = 1
modulate = Color(0.7, 0.7, 0.7, 1)
